...
){
    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .padding(top = 10.dp, start = 20.dp, end = 20.dp)
            .testTag("reviewEntryScreen"),
        horizontalAlignment = CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(5.dp)
    ) {
        Text("Rate Your Stay",
            fontSize = 30.sp,
            fontWeight = FontWeight.Bold,
...
        )
        OutlinedTextField(
            value = uiState.title,
            onValueChange = onTitleChanged,
            modifier = Modifier
                .fillMaxWidth(0.85F)
                .testTag("titleEntry"),
        )
        PropertyImageSelect(imageGallery, onImageSelect)
        Text("Address",
            fontSize = 20.sp,
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier.padding(top = 15.dp)
        )
        FilterCountryCard(
            label = "Country",
            list = countryList,
            selectedItem = uiState.selectedCountryItem,
            selectedIndex = {},
            expandedDropMenu = expandedCountryOptions,
            updateExpandedOptions = onCountryExpandedOptions,
            onSelected = onCountrySelected,
...
        Row(modifier = Modifier.fillMaxWidth(0.85F) ,horizontalArrangement = Arrangement.SpaceBetween) {
            OutlinedTextField(
                value = uiState.street,
                onValueChange = onStreetChanged,
                modifier = Modifier
                    .fillMaxWidth(0.65F)
                    .testTag("streetEntry"),
                label = { Text("Street", color = MaterialTheme.colorScheme.primary) }
            )
            OutlinedTextField(
                value = uiState.number,
                onValueChange = onNumberChanged,
                modifier = Modifier
                    .fillMaxWidth(0.95F)
                    .testTag("numberEntry"),
                label = { Text("n", color = MaterialTheme.colorScheme.primary) }
            )
        }
        Text("Property type",
            fontSize = 20.sp,
            color = MaterialTheme.colorScheme.primary,
...
        OutlinedTextField(
            value = uiState.review,
            onValueChange = updateReview,
            modifier = Modifier
                .fillMaxWidth(0.85F)
                .padding(top = 5.dp)
                .testTag("reviewEntry"),
        )
        Button(
            onClick = onSaved,
            enabled = !enableButton,
            modifier = Modifier
                .fillMaxWidth()
                .align(CenterHorizontally)
                .padding(top = 30.dp)
                .testTag("saveReview")
        ){
            Text(text = "Save")
        }
    }
}

...
        OutlinedButton(
            onClick = onOpenDialog,
            shape = RoundedCornerShape(5.dp),
            border = BorderStroke(1.dp, MaterialTheme.colorScheme.outline),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("dateRangeSelector")
        ) {

            Icon(
                imageVector = Icons.Default.DateRange,
                contentDescription = "Select date",
                tint = MaterialTheme.colorScheme.primary
...
                            )
                        )
                    }
                    onDismiss()
                }
            ) {
                Text("OK")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
...
            value = type,
            onValueChange = {},
            readOnly = true,
            modifier = Modifier
                .menuAnchor()
                .fillMaxWidth()
                .testTag("propertyType"),
            label = {
                Text(
                    "Select the property type",
                    color = MaterialTheme.colorScheme.primary
                )
            },
...
