...
    onForgotPasswordClick: () -> Unit
){
    Column(Modifier
        .fillMaxSize()
        .background(MaterialTheme.colorScheme.background)
        .statusBarsPadding()
        .testTag("loginScreen"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center) {
        Text(text = "Login", fontSize = 40.sp, fontWeight = FontWeight.Bold, color = MaterialTheme.colorScheme.primary)
        OutlinedTextField(
            value = uiState.email,
            onValueChange = onEmailChange,
...
                onForgotPasswordClick()
            }.testTag("forgotPasswordText"),
            color = MaterialTheme.colorScheme.primary
        )
        Button(
            onClick = onLoginClick,
            modifier = Modifier.fillMaxWidth(0.75f).testTag("loginButton")
        ){
            Text(text = "Login")
        }
        OutlinedButton(
            onClick = onSignUpClick,
            border = BorderStroke(2.dp, MaterialTheme.colorScheme.secondary),
...
